# EIU-FABLAB-AMR

./: .gitignore  .gitmodules  README.md
differential_drive/: CMakeLists.txt  package.xml
differential_drive/config/: nhatbot_controllers.yaml
differential_drive/differential_drive/: differential_drive_controller.py  motor_controller_node.py  odom_estimator_node.py
differential_drive/include/differential_drive/: motor_controller.hpp  odom_estimator.hpp
differential_drive/launch/: controller.launch.py
differential_drive/src/: motor_controller.cpp  odom_estimator.cpp
nav2/: CMakeLists.txt  package.xml
nav2/config/: bt_navigator.yaml  controller.yaml  planner_server.yaml
nhatbot_controller/: CMakeLists.txt  motion_planner_plugins.xml  package.xml
nhatbot_controller/config/: controller_server.yaml
nhatbot_controller/include/nhatbot_controller/: pd_motion_planner.hpp  pd_nav2_motion_planner.hpp  pure_pursuit.hpp  pure_pursuit_nav2_motion_planner.hpp
nhatbot_controller/nhatbot_controller/: pd_motion_planner.py  pure_pursuit_tracking.py  tracking.py  tracking_controller.py
nhatbot_controller/src/lqr_controller/: lqr_lib.cpp  lqr_node.cpp  lqr_node_draft.cpp
nhatbot_controller/src/pd_controller/: nav2_pd_motion_planner.cpp  pd_motion_planner.cpp
nhatbot_controller/src/purePursuit_controller/: nav2_pure_pursuit_motion_planner.cpp  pure_pursuit.cpp
nhatbot_description/: CMakeLists.txt  package.xml
nhatbot_dobot_magician/: CMakeLists.txt  package.xml
nhatbot_drivers/nhatbot_firmware/: CMakeLists.txt  motor_interfaces.xml  package.xml  sensor_broadcasters.xml  sensor_interfaces.xml
nhatbot_drivers/nhatbot_firmware/config/: diff_drive_controller.yaml
nhatbot_drivers/nhatbot_firmware/include/nhatbot_firmware/: driver_manager.hpp  modbus_register.hpp  nhatbot_hw_interface.hpp  nhatbot_sensor_interface.hpp  sensor_broadcaster.hpp  zlac_sdk.hpp
nhatbot_drivers/nhatbot_firmware/launch/: bringup_hardware_interface.launch.py
nhatbot_drivers/nhatbot_firmware/odom_calibration/: calib_odom.py
nhatbot_drivers/nhatbot_firmware/src/: main.cpp  nhatbot_hw_interface.cpp  nhatbot_sensor_interface.cpp  sensor_broadcaster.cpp  zlac_sdk.cpp
nhatbot_localization/: CMakeLists.txt  package.xml
nhatbot_mapping/: CMakeLists.txt  package.xml
nhatbot_msgs/: CMakeLists.txt  package.xml
nhatbot_navigation/: CMakeLists.txt  package.xml
nhatbot_planner/: CMakeLists.txt  global_planner_plugins.xml  package.xml
nhatbot_planner/config/: costmap.yaml  planner_server.yaml  smoother_server.yaml
nhatbot_planner/include/nhatbot_planner/: a_star_nav2_planner.hpp  a_star_nav2_smoother.hpp  a_star_planner_costmap.hpp  dijkstra_nav2_planner.hpp  dijkstra_nav2_smoother.hpp  dijkstra_planner.hpp
nhatbot_planner/launch/: navigation.launch.py  nhatbot_planner.launch.py  test.launch.py
nhatbot_planner/nhatbot_planner/: a_star_planner.py  dijkstra_planner.py
nhatbot_planner/nhatbot_planner_costmap/: a_star_planner_costmap.py  dijkstra_planner_costmap.py
nhatbot_planner/src/: a_star_planner.cpp  dijkstra_planner.cpp
nhatbot_planner/src/a_star_planner/: a_star_nav2_planner.cpp  a_star_nav2_smoother.cpp  a_star_planner.cpp  a_star_planner_costmap.cpp
nhatbot_planner/src/dijkstra_planner/: dijkstra_nav2_planner.cpp  dijkstra_nav2_smoother.cpp  dijkstra_planner_costmap.cpp
nhatbot_ros2/: CMakeLists.txt  package.xml
nhatbot_ros2_basic/: CMakeLists.txt  package.xml
nhatbot_ros2_basic/include/nhatbot_ros2_basic/: moverobot_component.hpp
nhatbot_ros2_basic/nhatbot_basic_projects/: wait_for_box_bots_arrive_condition.cpp  wait_for_box_bots_arrive_static.cpp
nhatbot_ros2_basic/ros_component/: moverobot_component.cpp
nhatbot_ros2_basic/ros_debugging/: logger_info.cpp
nhatbot_ros2_basic/ros_executors/: callback_groups_multi.cpp  executor_callbackgroups_mutualyexclusive.cpp  executor_callbackgroups_mutualyexclusive_multiple.cpp  executor_callbackgroups_reentrant.cpp  executor_multiThread.cpp  executor_singleThread.cpp  issuse_SingleThread.cpp  multiThread_executor_oneNode.cpp  multi_with_singleThread.cpp  mutually_exclusive.cpp  mutualyexclusive_multiple.cpp  odom_executor.cpp  reentrant.cpp  simple_executor.cpp  singleThreadStatic_executor.cpp  singleThread_executor_demo.cpp  singleThread_executor_oneNode.cpp  twoNodes_twoExecutors.cpp
nhatbot_ros2_basic/ros_node/: ros_node.cpp
nhatbot_ros2_basic/ros_parameter/: arguments_examples.cpp  move_robot_with_arguments.cpp  move_robot_with_params.cpp  parameter_tests_callback.cpp
nhatbot_ros2_basic/ros_qos/: publisher_custom_minimal_qos.cpp  publisher_durability.cpp  subscriber_custom_minimal_qos.cpp  subscriber_durability.cpp
nhatbot_ros2_basic/ros_topic/: move_robot.cpp  moving_mobilerobot.cpp  odom_publisher.cpp  simple_topic_publisher.cpp  simple_topic_publisher_composable.cpp  sub_odom.cpp  webcam_publisher.cpp
nhatbot_safety/: CMakeLists.txt  README.md  package.xml
nhatbot_stack/: CMakeLists.txt  package.xml
nhatbot_stack/config/: amcl_config.yaml  angular_filter.yaml  joy_config.yaml  joy_teleop.yaml  twist_mux_joy.yaml  twist_mux_topics.yaml  usb_params.yaml
nhatbot_stack/include/nhatbot_stack/: static_tf_pub.hpp
nhatbot_stack/launch/: lidar_a1_filter.launch.py  nhatbot_bringup.launch.py  robot_localization.launch.py  utils.launch.py
nhatbot_stack/nhatbot_stack/: static_tf_publisher.py  test.py
nhatbot_stack/rviz/: display.rviz  nav2_control.rviz  nav2_custom.rviz  nav2_default_view.rviz
nhatbot_stack/src/: static_tf_pub.cpp
nhatbot_twist_teleop/: CMakeLists.txt  package.xml
nhatbot_utils/: CMakeLists.txt  package.xml
scripts/: Dockerfile  cmd.txt  start_nhatbot.sh  start_nhatbot_auto.sh  start_nhatbot_copy.sh  test.sh  udev_setup.sh
zlac8015d_driver/: CMakeLists.txt  package.xml
zlac8015d_driver/include/zlac8015d_driver/: modbus_register.hpp  node_parameters.hpp  zlac8015d_driver.hpp  zlac_interfaces.hpp
zlac8015d_driver/params/: test.yaml
zlac8015d_driver/src/: zlac8015d_driver.cpp
zlac8015d_driver/zlac8015d_driver/: modbus_register.py  node_parameters.py  zlac8015d_driver.py
(+94 files in other folders)
